[tool.poetry]
name = "linear-regression"
version = "0.1.0"
description = ""
authors = ["Osama-Yousef <osamawalidyousef@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
seaborn = "^0.10.1"
numpy = "^1.19.1"
jupyterlab = "^2.2.6"
matplotlib = "^3.3.1"
pandas = "^1.1.1"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
